# Vulkan-Minimal-Example-Clear-Screen

./: .gitignore  CMakeLists.txt  README.md
examples/clearscreen/: main.cpp
src/loader/: LoaderBinary.h
src/utils/: ErrorHelper.h
src/vulkanbase/: SwapChainHelper.h  VulkanHelper.h  VulkanStrings.h
src/windowmanager/: XCBWindowHelper.h
